--- a/斗鱼直播/斗鱼直播/class/Home/View/RecommendHeaderView.xib
+++ b/斗鱼直播/斗鱼直播/class/Home/View/RecommendHeaderView.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
@@ -54,6 +53,10 @@
                 <constraint firstItem="beH-MC-Hom" firstAttribute="top" secondItem="qoS-Vq-cAW" secondAttribute="bottom" constant="11" id="s9e-eD-V1g"/>
                 <constraint firstItem="vY9-Gy-qZ8" firstAttribute="centerY" secondItem="beH-MC-Hom" secondAttribute="centerY" id="yME-UU-7Sz"/>
             </constraints>
+            <connections>
+                <outlet property="imageViewIcon" destination="beH-MC-Hom" id="mTy-S2-VCs"/>
+                <outlet property="labelTitle" destination="vY9-Gy-qZ8" id="LKc-IS-53r"/>
+            </connections>
         </collectionReusableView>
     </objects>
     <resources>
